--- a/h5.html
+++ b/h5.html
@@ -65,6 +65,12 @@ select:-webkit-autofill
               text-align:center;
               color:#fff;
           }
+          .main
+          {
+              width:100%;
+              padding:4rem 0;
+              -webkit-overflow-scrolling:touch;
+          }
           footer
           {
               position:fixed;
@@ -77,12 +83,40 @@ select:-webkit-autofill
               text-align:center;
               color:#666;
           }
-
       </style>
   </head>
   <body>
       <header>H5</header>
-      <section></section>
+      <section class="main">
+          <p>qwerertrtyrutyuyytyuytruytu</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>a</p>
+          <p>14325446555</p>
+      </section>
       <footer>copyright &copy; 2016</footer>
   </body>
 </html>
