--- a/h5.html
+++ b/h5.html
@@ -89,7 +89,7 @@ select:-webkit-autofill
   </head>
   <body>
       <header>
-          <a class="nav-btn" id="nav-left" href="javascript:void(0);">返回</a>
+          <!--<a class="nav-btn" id="nav-left" href="javascript:void(0);">返回</a>-->
           <h1>
             H5
           </h1>
