--- a/h5.html
+++ b/h5.html
@@ -90,10 +90,11 @@ select:-webkit-autofill
   <body>
       <header>
           <!--<a class="nav-btn" id="nav-left" href="javascript:void(0);">返回</a>-->
-          <h1>
+          <!--<h1>
             H5
-          </h1>
-          <a class="nav-btn" id="nav-right" href="javascript:void(0);">更多</a>
+          </h1>-->
+            H5
+          <!--<a class="nav-btn" id="nav-right" href="javascript:void(0);">更多</a>-->
       </header>
       <section class="main">
           <p>qwerertrtyrutyuyytyuytruytu</p>
