--- a/index.html
+++ b/index.html
@@ -68,13 +68,19 @@
                 <div class="bd">
                     <ul>
                         <li>
-                            <img src="images/banner1.jpg">
+                            <a href="article.html">
+                                <img src="images/banner1.jpg">
+                            </a>
                         </li>
                         <li>
-                            <img src="images/banner2.jpg">
+                            <a href="article.html">
+                                <img src="images/banner2.jpg">
+                            </a>
                         </li>
                         <li>
-                            <img src="images/banner3.jpg">
+                            <a href="article.html">
+                                <img src="images/banner3.jpg">
+                            </a>
                         </li>
                     </ul>
                 </div>
