添加百度新闻代码

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 <!-- font -->
 <link href='http://fonts.useso.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
 <!-- //font -->
+
+<style type=text/css> div{font-size:12px;font-family:arial}.baidu{font-size:14px;line-height:24px;font-family:arial} a,a:link{color:#0000cc;}
+.baidu span{color:#6f6f6f;font-size:12px} a.more{color:#008000;}a.blk{color:#000;font-weight:bold;}</style>
+
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
 <script type="text/javascript" src="js/move-top.js"></script>
@@ -344,5 +348,6 @@
 		</div>
 	</div>
 	<!-- //footer -->
+<script language="JavaScript" type="text/JavaScript" src="http://news.baidu.com/n?cmd=1&class=civilnews&pn=1&tn=newsbrofcu"></script>
 </body>	
 </html>
