--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <link href='http://fonts.useso.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
 <!-- //font -->
 
-<style type=text/css> div{font-size:12px;font-family:arial}.baidu{font-size:14px;line-height:24px;font-family:arial} a,a:link{color:#0000cc;}
+<style type=text/css>.baidu{font-size:14px;line-height:24px;font-family:arial}
 .baidu span{color:#6f6f6f;font-size:12px} a.more{color:#008000;}a.blk{color:#000;font-weight:bold;}</style>
 
 <script src="js/jquery-1.11.1.min.js"></script>
