--- a/camera.html
+++ b/camera.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <input type="file" accept="image/*;capture=camera">
+  <input type="file">
 </body>
 </html>
